# ChemSpaceTracker

./: CMakeLists.txt  README.md
ChemicalSpaces/: npgps.cst
cmake_modules/: FindRDKit.cmake
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  calculations.cpp  calculations.h  icons.qrc  importsmidialog.cpp  importsmidialog.h  importsmidialog.ui  iodata.cpp  iodata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mlocalizer.cpp  mlocalizer.h  progressdialog.cpp  progressdialog.h  progressdialog.ui  removelabeldialog.cpp  removelabeldialog.h  removelabeldialog.ui  selectbylabeldialog.cpp  selectbylabeldialog.h  selectbylabeldialog.ui  selectionstyledialog.cpp  selectionstyledialog.h  selectionstyledialog.ui  setlabeldialog.cpp  setlabeldialog.h  setlabeldialog.ui  similartysearchdialog.cpp  similartysearchdialog.ui
src/QPlotly/: CMakeLists.txt  databar.cpp  databar.h  datacurve.cpp  datacurve.h  datapoint.cpp  qplotly.cpp  qplotly.h  testqplotly.cpp
